[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ServidoresDGP"
version = "0.0.1"
description = "Resultados atuais com informa\u00e7\u00f5es de dados de pessal por meio da ferramenta de visualiza\u00e7\u00e3o Power BI a partir da tecnologia business intelligence"
authors = [
  { name = "Erick" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ServidoresDGP"]
include = ["pyproject.toml", "ServidoresDGP/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ServidoresDGP"]
force-sort-within-sections = true

